transfer/k030-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer-service
spec:
  selector:
    dojo/app: transfer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
