transfer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transfer-ingress
  labels:
    app: transfer
    app.kubernetes.io/name: transfer
    app.kubernetes.io/instance: transfer
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: dojo-suite
    app.kubernetes.io/managed-by: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: up.telco.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transfer-service
                port:
                  number: 80
