transfer/k050-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transfer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: up.telco.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transfer-service
            port:
              number: 80
